Single requestAnimationFrame + Use synchronized only canvas elements for drawImage from video to projectors + Throttle requestVideoFrameCallback videoVisibility check + Transparent chapters + Prevent videoFrameCount of undefined

--- a/src/styles/youtube-ambilight.scss
+++ b/src/styles/youtube-ambilight.scss
@@ -179,6 +179,16 @@ html[data-ambilight-enabled="true"] {
     transform: var(--video-transform);
   }
 
+  /* Cosmetics - Chapters */
+
+  #header.ytd-engagement-panel-title-header-renderer,
+  #content.ytd-engagement-panel-section-list-renderer {
+    background: none;
+  }
+  #time.ytd-macro-markers-list-item-renderer {
+    background: rgba(0, 0, 0, .15);
+  }
+
   /* Cosmetics - Search */
 
   ytd-app[is-watch-page] {
